--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -50,14 +50,18 @@
     <Compile Include="Abstract\IContentService.cs" />
     <Compile Include="Abstract\IHeadingService.cs" />
     <Compile Include="Abstract\IWriterService.cs" />
+    <Compile Include="Abstract\IMessageService.cs" />
     <Compile Include="Concrete\AboutManager.cs" />
     <Compile Include="Concrete\CategoryManager.cs" />
     <Compile Include="Concrete\ContactManager.cs" />
     <Compile Include="Concrete\ContentManager.cs" />
     <Compile Include="Concrete\HeadingManager.cs" />
+    <Compile Include="Concrete\MessageManager.cs" />
     <Compile Include="Concrete\WriterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidetionRules\CategoryValidator.cs" />
+    <Compile Include="ValidetionRules\ContactValidator.cs" />
+    <Compile Include="ValidetionRules\MessageValidator.cs" />
     <Compile Include="ValidetionRules\WriterValidator.cs" />
   </ItemGroup>
   <ItemGroup>
